Added jquery and ajax

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,17 +9,21 @@
     <div class="container">
       <h1>Hello, {{ string }}!</h1>
 
-      <form role="form" method="post">
+      <form role="form" method="post" onsubmit="return false">
         <div class="form-group">
             <input type="number" class="form-control" name="number-one" required>
             <input type="number" class="form-control" name="number-two" required>
         </div>
         <button type="submit" class="btn btn-primary">ENTER!</button>
       </form>
+      <br>
 
-      <p>The calculated value is {{ value }}</p>
+      <p>
+        The calculated value is <span id="results"></span>
+      </p>
     </div>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="{{ url_for('static', filename="main.js") }}"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   </body>
 </html>
