added git hub api

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap 101 Template</title>
+    <title>GitMatched</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
@@ -11,16 +11,17 @@
 
       <form role="form" method="post" onsubmit="return false">
         <div class="form-group">
-            <input type="number" class="form-control" name="number-one" required>
-            <input type="number" class="form-control" name="number-two" required>
+            <input type="text" class="form-control" name="location" placeholder="Enter location" required>
+            <input type="text" class="form-control" name="language" placeholder="enter programming language" required>
         </div>
-        <button type="submit" class="btn btn-primary">ENTER!</button>
+        <button type="submit" class="btn btn-primary">Find me a developer!</button>
       </form>
       <br>
 
-      <p>
-        The calculated value is <span id="results"></span>
-      </p>
+      <div id="results">
+        
+      </div>
+
     </div>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="{{ url_for('static', filename="main.js") }}"></script>
