--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,11 +3,18 @@
   <head>
     <title>GitMatched</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/static/bootstrap.min.css" rel="stylesheet" media="screen">
+
+    <style type="text/css">
+      .avatar{
+        max-width: 250px;
+      }
+    </style>
+
   </head>
   <body>
     <div class="container">
-      <h1>Hello, {{ string }}!</h1>
+      <h1>Gitmatched</h1>
 
       <form role="form" method="post" onsubmit="return false">
         <div class="form-group">
@@ -15,6 +22,7 @@
             <input type="text" class="form-control" name="language" placeholder="enter programming language" required>
         </div>
         <button type="submit" class="btn btn-primary">Find me a developer!</button>
+        <button type="submit" class="btn btn-success" id="try-again">try a different locationn</button>
       </form>
       <br>
 
@@ -23,8 +31,8 @@
       </div>
 
     </div>
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="{{ url_for('static', filename="jquery-1.11.0.min.js") }}"></script>
     <script src="{{ url_for('static', filename="main.js") }}"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('static', filename="bootstrap.min.js") }}"></script>
   </body>
 </html>
